# lobster-powers

./: .env.example  .gitignore  CLAUDE.md  README.md  install.sh  plugin.json  pyproject.toml  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
docs/: DESIGN.md  TESTING.md  run-tests.sh
docs/plans/: 2026-02-01-lp-browser.md  2026-02-01-lp-image.md  2026-02-01-lp-memory.md  2026-02-01-lp-notify.md  2026-02-01-lp-tts.md  2026-02-01-lp-web-fetch.md  2026-02-01-lp-web-search.md
skills/: cron.md  memory.md  tts.md  web-search.md
skills/browser/: SKILL.md
skills/cron/: SKILL.md
skills/image/: SKILL.md
skills/lp-browser/: SKILL.md
skills/lp-cron/: SKILL.md
skills/lp-image/: SKILL.md
skills/lp-memory/: SKILL.md
skills/lp-notify/: SKILL.md
skills/lp-tts/: SKILL.md
skills/lp-web-fetch/: SKILL.md
skills/lp-web-search/: SKILL.md
skills/memory/: SKILL.md
skills/notify/: SKILL.md
skills/web-fetch/: SKILL.md
src/lobster_powers/: __init__.py  env.py
src/lobster_powers/tools/: __init__.py  browser.py  cron.py  image.py  memory.py  notify.py  tts.py  web_fetch.py  web_search.py
src/openclaw_tools_mcp/: __init__.py  gateway.py  server.py
src/openclaw_tools_mcp/tools/: __init__.py  cron.py  memory.py
