[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lobster-powers"
version = "0.1.0"
description = "OpenClaw superpowers for any AI agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "superbereza" }
]
keywords = ["openclaw", "ai", "agent", "cron", "memory", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
cron = []
memory = ["openai", "numpy"]
browser = ["playwright"]
tts = ["edge-tts", "openai", "httpx"]
web = ["httpx", "readability-lxml", "lxml", "html2text"]
image = ["openai", "anthropic", "httpx"]
all = ["lobster-powers[cron,memory,browser,tts,web,image]"]

[project.scripts]
lp-cron = "lobster_powers.tools.cron:main"
lp-memory = "lobster_powers.tools.memory:main"
lp-browser = "lobster_powers.tools.browser:main"
lp-notify = "lobster_powers.tools.notify:main"
lp-tts = "lobster_powers.tools.tts:main"
lp-web-fetch = "lobster_powers.tools.web_fetch:main"
lp-web-search = "lobster_powers.tools.web_search:main"
lp-image = "lobster_powers.tools.image:main"

[project.urls]
Homepage = "https://github.com/superbereza/lobster-powers"
Repository = "https://github.com/superbereza/lobster-powers"

[tool.hatch.build.targets.wheel]
packages = ["src/lobster_powers"]
